Changes Account Page

--- a/account_page.html
+++ b/account_page.html
@@ -71,25 +71,25 @@
             <div class="account-edit">
                 <div class="input-container">
                     <label>Username</label>
-                    <input type="text" placeholder="Username">
+                    <input type="text" id="username">
                 </div>
             </div>
 
             <div class="account-edit">
                 <div class="input-container">
                     <label>Email</label>
-                    <input type="email" placeholder="Email">
+                    <input type="email" id="email">
                 </div>
                 <div class="input-container">
                     <label>Password</label>
-                    <input type="text" placeholder="Password">
+                    <input type="text" id="password">
                 </div>
             </div>
 
             <div class="account-edit">
                 <div class="input-container">
                     <label>Address</label>
-                    <textarea placeholder="Address"></textarea>
+                    <textarea id="address"></textarea>
                 </div>
             </div>
         </form>
