--- a/admin.html
+++ b/admin.html
@@ -45,11 +45,10 @@
     <div class="main">
         <div class="main_container">
             <div class="main_title">
+                <button class="btn-logout" id="logout">Logout</button>
                 <h1>Admin Page</h1>
             </div>
-            <div id="main_content" class="main_content">
-
-            </div>
+            <div id="main_content" class="main_content"></div>
         </div>
     </div>
 
